--- a/design/index.html
+++ b/design/index.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search for an older pet</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <div class="main-container">
-      <header>
-        <nav>
-          <ul class="navlist">
-            <li class="navlist__item">older.dog</li>
-            <li class="navlist__item">About</li>
-            <li class="navlist__item">Contact</li>
-          </ul>
-        </nav>
 
-        <div class="main-hero">
-          <h1 class="main-hero__title">Search For An Older Pet</h1>
-          <h2 class="main-hero__subtitle">
-            Help an older dog or cat find a new home.
-          </h2>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Search for an older pet</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+  <header>
+    <nav>
+      <ul class="navlist">
+        <li>older.dog</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+  </header>
+
+  <div class="main-page-hero">
+    <h1>Search For An Older Pet</h1>
+    <h2>
+      Help an older dog or cat find a new home.
+    </h2>
+  </div>
+
+  <div class="main-page-container">
+    <div class="search-form-container">
+      <form>
+        <input type="text" placeholder="City, State or Zipcode" />
+        <div class="button-container">
+          <button class="search-form-button" type="button">
+            Search For Dogs
+          </button>
+          <button class="search-form-button" type="button">
+            Search For Cats
+          </button>
+
         </div>
+      </form>
+    </div>
 
-        <div class="search-form-container">
-          <form class="search-form">
-            <input
-              class="search-form__input"
-              type="text"
-              placeholder="City, State or Zipcode"
-            />
-            <button class="search-form__button" type="button">
-              Find A New Friend
-            </button>
-          </form>
-        </div>
-      </header>
-
-      <div class="index-text-container">
-        <main>
-          <header>
-            <h3 class="index-text__header">
-              Why should you adopt an older pet?
-            </h3>
-          </header>
+    <div>
+      <main>
+        <header>
+          <h3>
+            Why should you adopt an older pet?
+          </h3>
           <article>
-            <p class="index-text__text">
+            <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
               atque ut magni vitae id? Consequuntur et sequi vitae dolore
               voluptates! Lorem ipsum dolor sit amet consectetur adipisicing
@@ -54,21 +57,22 @@
               maxime laboriosam optio ab qui minima quae. Impedit, iusto?
             </p>
 
-            <p class="index-textr__text">
+            <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
               atque ut magni vitae id? Consequuntur et sequi vitae dolore
               voluptates!
             </p>
 
-            <p class="index-text__text">
+            <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
               atque ut magni vitae id? Consequuntur et sequi vitae dolore
               voluptates!
             </p>
           </article>
-        </main>
-      </div>
+      </main>
     </div>
-    <!-- <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@barkernotbaker?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from James Barker"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">James Barker</span></a> -->
-  </body>
+  </div>
+  <!-- <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@barkernotbaker?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from James Barker"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">James Barker</span></a> -->
+</body>
+
 </html>
