--- a/design/search_results.html
+++ b/design/search_results.html
@@ -1,111 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search for an older pet</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <div class="main-container">
-      <header>
-        <nav>
-          <ul class="navlist">
-            <li class="navlist__item">older.dog</li>
-            <li class="navlist__item">About</li>
-            <li class="navlist__item">Contact</li>
-          </ul>
-        </nav>
-      </header>
 
-      <main>
-        <div class="search_results_container ">
-          <h2 class="search_results_header">Search Results for 12303</h2>
-          <h3 class="search_results_count">47 results found</h3>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Search for an older pet</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
 
-          <ul class="search_result_list">
-            <li class="search_result_list__item result">
-              <h3 class="result__title">Sarge</h3>
-              <img
-                srcset="images/small.jpeg 580w.
-                        images/kitty.jpeg 2000w"
-                src="images/kitty.jpeg"
-                width="250"
-                height="250"
-                alt=""
-                class="result__image"
-              />
-              <p class="result__about_text">Lorem ipsum dolor sit.</p>
-              <button type="button" class="result__button">Learn More</button>
-            </li>
+<body>
+  <header>
+    <nav>
+      <ul class="navlist">
+        <li class="navlist-item">older.dog</li>
+        <li class="navlist-item">About</li>
+        <li class="navlist-item">Contact</li>
+      </ul>
+    </nav>
+  </header>
 
-            <li class="search_result_list__item result">
-              <h3 class="result__title">Moses</h3>
-              <img
-                src="images/dog1_small.jpeg"
-                width="250"
-                height="250"
-                alt=""
-                class="result__image"
-              />
-              <p class="result__about_text">Lorem ipsum dolor sit.</p>
-              <button type="button" class="result__button">Learn More</button>
-            </li>
+  <div class="main-container">
+    <main>
+      <div class="content-container ">
+        <h2 class="search-results-header">Search Results for 12303</h2>
+        <h3 class="search-results-count">47 results found</h3>
 
-            <li class="search_result_list__item result">
-              <h3 class="result__title">Sarge</h3>
-              <img
-                src="images/doggy1.jpeg"
-                width="250"
-                height="250"
-                alt=""
-                class="result__image"
-              />
-              <p class="result__about_text">Lorem ipsum dolor sit.</p>
-              <button type="button" class="result__button">Learn More</button>
-            </li>
+        <ul class="search-result-list">
+          <li class="search-result-list-item">
+            <h3 class="small-title center margin-1">Sarge</h3>
+            <img src="images/kitty.jpeg" width="250" height="250" alt="" class="result-image" />
+            <p class="result-about-text">Lorem ipsum dolor sit.</p>
+            <button type="button" class="result-button">Learn More</button>
+          </li>
 
-            <li class="search_result_list__item result">
-              <h3 class="result__title">Sarge</h3>
-              <img
-                src="images/kitty.jpeg"
-                width="250"
-                height="250"
-                alt=""
-                class="result__image"
-              />
-              <p class="result__about_text">Lorem ipsum dolor sit.</p>
-              <button type="button" class="result__button">Learn More</button>
-            </li>
+          <li class="search-result-list-item">
+            <h3 class="small-title center margin-1">Sarge</h3>
+            <img src="images/dog1_small.jpeg" width="250" height="250" alt="" class="result-image" />
+            <p class="result-about-text">Lorem ipsum dolor sit.</p>
+            <button type="button" class="result-button">Learn More</button>
+          </li>
 
-            <li class="search_result_list__item result">
-              <h3 class="result__title">Moses</h3>
-              <img
-                src="images/dog1_small.jpeg"
-                width="250"
-                height="250"
-                alt=""
-                class="result__image"
-              />
-              <p class="result__about_text">Lorem ipsum dolor sit.</p>
-              <button type="button" class="result__button">Learn More</button>
-            </li>
+          <li class="search-result-list-item">
+            <h3 class="small-title center margin-1">Sarge</h3>
+            <img src="images/doggy1.jpeg" width="250" height="250" alt="" class="result-image" />
+            <p class="result-about-text">Lorem ipsum dolor sit.</p>
+            <button type="button" class="result-button">Learn More</button>
+          </li>
 
-            <li class="search_result_list__item result">
-              <h3 class="result__title">Sarge</h3>
-              <img
-                src="images/doggy1.jpeg"
-                width="250"
-                height="250"
-                alt=""
-                class="result__image"
-              />
-              <p class="result__about_text">Lorem ipsum dolor sit.</p>
-              <button type="button" class="result__button">Learn More</button>
-            </li>
-          </ul>
-        </div>
-      </main>
-    </div>
-  </body>
+          <li class="search-result-list-item">
+            <h3 class="small-title center margin-1">Sarge</h3>
+            <img src="images/kitty.jpeg" width="250" height="250" alt="" class="result-image" />
+            <p class="result-about-text">Lorem ipsum dolor sit.</p>
+            <button type="button" class="result-button">Learn More</button>
+          </li>
+        </ul>
+      </div>
+    </main>
+  </div>
+</body>
+
 </html>
