--- a/design/about.html
+++ b/design/about.html
@@ -12,37 +12,40 @@
       <nav>
         <ul class="navlist">
           <li><a href="index.html">older.dog</a></li>
-          <li><a href="about.html">About</a></li>
-          <li class="active"><a href="contact.html">Contact</a></li>
+          <li class="active"><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
 
     <div class="main-container">
       <main>
-        <a href="index.html">back to results</a>
-        <h1 class="page-title accent-title">Sarge</h1>
+        <h1 class="page-title center-title accent-title">About older.dog</h1>
         <img
-          src="images/kitty.jpeg"
+          src="images/doggy3.jpeg"
           width="300"
           height="300"
           alt="kitty cat"
-          class="pet-image"
+          class="pet-image center"
         />
-        <h2 class="page-subtitle accent-title">Sarge the Cat.</h2>
+        <h2 class="page-subtitle accent-title">This page was created.</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
           recusandae, explicabo quidem ipsam amet commodi. A, sint quia. Vel?
         </p>
-        <h2 class="page-subtitle accent-title">Former Circus Performer</h2>
+        <h2 class="page-subtitle accent-title">This page was created.</h2>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque
           dolorem animi ab voluptatibus quas consequuntur ipsam tempore. Hic
           consectetur, enim distinctio alias a harum impedit deserunt nihil.
         </p>
-        <a href="https://www.petfinder.com" class="adoption-link"
-          >Adopt Sarge</a
-        >
+        <h2 class="page-subtitle accent-title">This page was created.</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
+          eaque id iste autem accusantium in distinctio minima. Quibusdam, iste
+          optio! Earum id eligendi dicta porro similique.
+          <a href="www.github.com">github</a>
+        </p>
       </main>
     </div>
   </body>
