--- a/design/index.html
+++ b/design/index.html
@@ -1,78 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Search for an older pet</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Search for an older pet</title>
-  <link rel="stylesheet" href="css/style.css" />
-</head>
+  <body>
+    <main>
+      <header>
+        <nav>
+          <ul class="navlist">
+            <li class="active"><a href="index.html">older.dog</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+      <div class="upper-container">
+        <div class="opacity-layer">
+          <h1 class="page-title center-title">Find An Older Pet</h1>
+          <h2 class="page-subtitle center-title">
+            Help an older dog or cat find a new home.
+          </h2>
 
-<body>
-  <header>
-    <nav>
-      <ul class="navlist">
-        <li>older.dog</li>
-        <li>About</li>
-        <li>Contact</li>
-      </ul>
-    </nav>
-  </header>
-
-  <div class="main-page-hero">
-    <h1>Search For An Older Pet</h1>
-    <h2>
-      Help an older dog or cat find a new home.
-    </h2>
-  </div>
-
-  <div class="main-page-container">
-    <div class="search-form-container">
-      <form>
-        <input type="text" placeholder="City, State or Zipcode" />
-        <div class="button-container">
-          <button class="search-form-button" type="button">
-            Search For Dogs
-          </button>
-          <button class="search-form-button" type="button">
-            Search For Cats
-          </button>
-
+          <div class="search-container">
+            <form>
+              <input type="text" placeholder="Zip Code, City, or State" />
+              <button type="button">Find a new friend</button>
+            </form>
+          </div>
         </div>
-      </form>
-    </div>
+      </div>
 
-    <div>
-      <main>
-        <header>
-          <h3>
-            Why should you adopt an older pet?
-          </h3>
-          <article>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
-              atque ut magni vitae id? Consequuntur et sequi vitae dolore
-              voluptates! Lorem ipsum dolor sit amet consectetur adipisicing
-              elit. Amet iusto, quod, laborum commodi voluptatem eum, atque
-              maxime laboriosam optio ab qui minima quae. Impedit, iusto?
-            </p>
-
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
-              atque ut magni vitae id? Consequuntur et sequi vitae dolore
-              voluptates!
-            </p>
-
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
-              atque ut magni vitae id? Consequuntur et sequi vitae dolore
-              voluptates!
-            </p>
-          </article>
-      </main>
-    </div>
-  </div>
-  <!-- <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@barkernotbaker?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from James Barker"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">James Barker</span></a> -->
-</body>
-
+      <div class="lower-container">
+        <h3 class="page-subtitle center-title">
+          Why should you adopt an older pet?
+        </h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
+          fugiat autem id veritatis eos nostrum deleniti voluptatum iste
+          laboriosam, amet tempore animi fuga. Facilis, magnam?
+        </p>
+      </div>
+    </main>
+    <!-- <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@barkernotbaker?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from James Barker"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">James Barker</span></a> -->
+  </body>
 </html>
